# mpi

./: .gitignore  exp.c  readme.md
exp/: big_int.c  big_int.h  exp.c
intro_pthreads/: CMakeLists.txt  circle.c  helloworld.c  row.c
intro_tasks/: circle.c  helloworld.c  mpiput.c  row.c
lab1/: clean.c  main.c  paral.c  posl.c  timesend.c
lab2/: CMakeLists.txt  main.c
pthreads/: pthattr.c
sort/: best.c  gen_mas.c  in.txt  main.c  reverse.c  worst.c
